# codeloom

./: .gitignore  CONTRIBUTING.md  ENHANCEMENTS.md  LICENSE  MANUAL.md  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
codeloom/: __init__.py  __main__.py  mcp_server.py  skill.md
codeloom/cli/: _helpers.py  integrations.py  main.py  viz_template.html
codeloom/core/: __init__.py  analyze.py  build.py  cluster.py  detect.py  extract.py  git.py  git_cochange.py  lang_detect.py  pipeline.py  resolve.py  tags_extract.py  ts_extract.py
codeloom/queries/: objc-tags.scm
codeloom/query/: embeddings.py  hybrid.py
codeloom/scripts/: auto_rebuild.sh  opencode_plugin.ts
codeloom/storage/: store.py
docs/: ARCHITECTURE.md  README_de.md  README_ja.md  README_ko.md  README_zh.md
tests/: test_build.py  test_cli.py  test_community.py  test_detect.py  test_e2e_pipeline.py  test_embeddings.py  test_evolution.py  test_extract.py  test_git_cochange.py  test_hybrid.py  test_incremental.py  test_intelligent_setup.py  test_lang_detect.py  test_markdown_extract.py  test_mcp_server.py  test_office_extract.py  test_pipeline.py  test_resolve.py  test_smart_setup.py  test_store.py  test_ts_extract_js.py  test_ts_extract_typescript.py  test_visualization.py
